Transfer Learning Blog edited

--- a/_notebooks/2020-10-02-Transfer-Learning.ipynb
+++ b/_notebooks/2020-10-02-Transfer-Learning.ipynb
@@ -269,15 +269,15 @@
         "id": "wXPGrPcg1weE"
       },
       "source": [
-        "# Transfer Learning: Training State of the Art Models with Less Data and Compute.\n",
+        "# Transfer Learning: Training State of the Art Models with Less Data and Compute\n",
         "> A Beginner's Practical look into Transfer Learning.\n",
         "\n",
         "- toc: false\n",
         "- branch: master\n",
         "- badges: true\n",
         "- comments: true\n",
-        "- categories: [begginer-tutorial]\n",
-        "- image: images/header-transfer-learning.png"
+        "- categories: [begginer]\n",
+        "- image: images/header-transfer-learning.jpg"
       ]
     },
     {
