Transfer Learning Update Post

--- a/_notebooks/2020-10-02-Transfer-Learning.ipynb
+++ b/_notebooks/2020-10-02-Transfer-Learning.ipynb
@@ -269,9 +269,8 @@
         "id": "wXPGrPcg1weE"
       },
       "source": [
-        "# Transfer Learning, Training State of the Art Models with Little Data and Compute.\n",
+        "# Training State of the Art Models with Little Data and Compute with Transfer Learning.\n",
         "> A Beginner's Practical look into Transfer Learning.\n",
-        "\n",
         "- toc: false\n",
         "- branch: master\n",
         "- badges: true\n",
@@ -290,7 +289,7 @@
         "\n",
         "Today, we are going to have a beginner's look into an interesting approach in Deep Learning, called **Transfer Learning**. We are also going to build a simple Computer Vision model to demonstrate a working example of Transfer Learning. Our model will be a classifier that differentiates between Millipedes, Centipedes and Spiders.\n",
         "\n",
-        "We are going to be using [fastai](https://github.com/fastai/fastai){:target=\"_blank\"}  and [PyTorch](https://github.com/pytorch/pytorch) for this tutorial. More specifically, we are going to be using Google's free service [Colab](https://colab.research.google.com/) that gives us free GPU to do Deep Learning."
+        "We are going to be using [fastai](https://github.com/fastai/fastai) and [PyTorch](https://github.com/pytorch/pytorch) for this tutorial. More specifically, we are going to be using Google's free service [Colab](https://colab.research.google.com/) that gives us free GPU to do Deep Learning."
       ]
     },
     {
