--- a/_notebooks/2020-10-02-Transfer-Learning.ipynb
+++ b/_notebooks/2020-10-02-Transfer-Learning.ipynb
@@ -1429,7 +1429,7 @@
         "id": "T8sqjpwkSUii"
       },
       "source": [
-        "We went upto an error rate of just 2.6% which means that our model is correct 97.4 % percent of the time!"
+        "We went upto an error rate of just 2.6% which means that our model is correct 97.4% of the time!"
       ]
     },
     {
@@ -1440,6 +1440,13 @@
       "source": [
         "As you have seen practically, Transfer Learning is a very important technique in Deep Learning that can go a long way. We only used 394 images here and trained for approximately for 20 seconds and got a model which is pretty accurate."
       ]
+    },
+    {
+      "source": [
+        "Stay tuned for more."
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     }
   ]
 }
