Added YouTube Link and correct gif

--- a/_notebooks/2021-01-21-Sign-Language-Inference-with-WebCam.ipynb
+++ b/_notebooks/2021-01-21-Sign-Language-Inference-with-WebCam.ipynb
@@ -640,6 +640,15 @@
       "outputs": []
     },
     {
+      "source": [
+        "Here is the final Video:\n",
+        "\n",
+        "> youtube: https://www.youtube.com/watch?v=-nggi8EwfOA&feature=youtu.be"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "p3EQnt0nZghG"
