Added correct YouTube Link

--- a/_notebooks/2021-01-21-Sign-Language-Inference-with-WebCam.ipynb
+++ b/_notebooks/2021-01-21-Sign-Language-Inference-with-WebCam.ipynb
@@ -643,7 +643,7 @@
       "source": [
         "Here is the final Video:\n",
         "\n",
-        "> youtube: https://www.youtube.com/watch?v=-nggi8EwfOA&feature=youtu.be"
+        "> youtube: https://youtu.be/-nggi8EwfOA"
       ],
       "cell_type": "markdown",
       "metadata": {}
