Added Part B link

--- a/_notebooks/2021-01-20-Sign-Language-Classification-with-Deep-Learning.ipynb
+++ b/_notebooks/2021-01-20-Sign-Language-Classification-with-Deep-Learning.ipynb
@@ -2717,6 +2717,13 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "source": [
+        "Here is the link to [Part B](https://jimmiemunyi.github.io/blog/tutorial/2021/01/21/Sign-Language-Inference-with-WebCam.html)"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     }
   ]
 }
