Updates Video Location

--- a/_notebooks/2021-01-21-Sign-Language-Inference-with-WebCam.ipynb
+++ b/_notebooks/2021-01-21-Sign-Language-Inference-with-WebCam.ipynb
@@ -9,7 +9,8 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python"
     }
   },
   "cells": [
@@ -51,8 +52,15 @@
         "\n",
         "Here is an example of what the output will look like:\n",
         "\n",
-        "![Output Video](images/post-signlanguage/sign-language-okay.gif)"
+        "> youtube: https://youtu.be/-nggi8EwfOA\n"
       ]
+    },
+    {
+      "source": [
+        "The whole code + training notebooks from Part A can be found in this [github repo](https://github.com/jimmiemunyi/Sign-Language-App)."
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
@@ -640,22 +648,20 @@
       "outputs": []
     },
     {
-      "source": [
-        "Here is the final Video:\n",
-        "\n",
-        "> youtube: https://youtu.be/-nggi8EwfOA"
-      ],
-      "cell_type": "markdown",
-      "metadata": {}
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "p3EQnt0nZghG"
       },
       "source": [
-        "And that's all in Part B. Hope you enjoyed it. The whole code + training notebooks from Part A can be found in this [github repo](https://github.com/jimmiemunyi/Sign-Language-App)."
+        "And that's all in Part B. Hope you enjoyed it."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ]
 }
