Corrected Book Blog

--- a/_notebooks/2021-02-15-Book-Recommendation-Model-Training.ipynb
+++ b/_notebooks/2021-02-15-Book-Recommendation-Model-Training.ipynb
@@ -57,6 +57,13 @@
       "outputs": []
     },
     {
+      "source": [
+        "# Imports"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1PfnYuY0suWm"
@@ -238,6 +245,13 @@
         "\n",
         "Let us see that in action."
       ]
+    },
+    {
+      "source": [
+        "# The DataSet"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
