Updated Projects with SimilarBooks

--- a/_notebooks/2021-02-15-Book-Recommendation-Model-Training.ipynb
+++ b/_notebooks/2021-02-15-Book-Recommendation-Model-Training.ipynb
@@ -27,7 +27,7 @@
         "- branch: master\n",
         "- badges: true\n",
         "- comments: true\n",
-        "- categories: [tutorial]\n",
+        "- categories: [projects, tutorial]\n",
         "- image: images/header-book.png"
       ]
     },
