Similar Books minor edits after first commit

--- a/_notebooks/2021-02-15-Book-Recommendation-Model-Training.ipynb
+++ b/_notebooks/2021-02-15-Book-Recommendation-Model-Training.ipynb
@@ -32,6 +32,25 @@
       ]
     },
     {
+      "source": [
+        "You can run the final app here:\n",
+        "\n",
+        "[![Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://share.streamlit.io/jimmiemunyi/similarbooks/main/similar_books.py)"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [
+        "Here is a screenshot of how the final app looks like:\n",
+        "\n",
+        "\n",
+        "![Similar Books](images/post-bookrecommendation/books.png)"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "cHPPkO6wsjn_",
